# simple-api-app

./: README.md  main.py
simple_api_app/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
simple_api_app/app/: db.py  models.py  routers.py
simple_api_app/database/: todos.db
simple_api_app/frontend/: app.py  utils.py
simple_api_app/frontend/screens/: login.py  signup.py  todo.py
