[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "John"}
]
packages = [
    {include = "app"},
    {include = "frontend"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "requests>=2.32.5,<3.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "SQLAlchemy>=2.0.32,<3.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
